--- a/startseite.html
+++ b/startseite.html
@@ -2,7 +2,7 @@
 <html>
    <head>
        <meta charset="utf-8">
-       <title>Get the order</title>
+       <title>Get the Order</title>
        <link rel="stylesheet" href="css/style.css">
    </head>
   <body>
