--- a/startseite.html
+++ b/startseite.html
@@ -31,7 +31,7 @@
         <a href="html/videospiele.html" target="_blank" class="headerTextHier">Videospiele</a>
       </fieldset>
       <fieldset>
-        <img alt="bild2">
+        <img class="containerImage" alt="Tree" src="https://avatarfiles.alphacoders.com/161/thumb-1920-161141.jpg">
         <a href="html/animes.html" target="_blank" class="headerTextHier">Animes und Mangas</a>
       </fieldset>
       <fieldset>
