--- a/startseite.html
+++ b/startseite.html
@@ -41,7 +41,7 @@
       </fieldset>
     </div>
     <footer>
-      <h3><p>Firma:</p>
+      <p>Firma:</p>
         <p>Ben's Movie Guide GmbH</p>
         <p>Musterstraße 1</p>
         <p>12345 Filmstadt</p>
