--- a/startseite.html
+++ b/startseite.html
@@ -53,7 +53,7 @@
         <p>Handelsregister: HRB 12345</p>
         <p>Umsatzsteuer-ID: DE123456789</p>
         <p>Haftungsausschluss:</p>
-        <p>Die Inhalte dieser Website wurden mit größtmöglicher Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen.</p></h3>
+        <p>Die Inhalte dieser Website wurden mit größtmöglicher Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen.</p> 
     </footer>
   </body>
 </html>
