--- a/startseite.html
+++ b/startseite.html
@@ -6,6 +6,15 @@
        <link rel="stylesheet" href="css/style.css">
    </head>
   <body>
+   <header>
+      <div>
+        <img src="img/logo.png" alt="logo" class="logo">
+        <a href="../startseite.html" class="headerText">STARTSEITE</a>
+      </div>
+      <div class="headerRight">
+        <a class="headerText headerRightTextAbstand">IMPRESSUM und KONTAKT</a>
+      </div>
+   </header>
     <h1>Get the order!</h1>
     <div class="middle">
       <div>
