--- a/html/impressum.html
+++ b/html/impressum.html
@@ -15,24 +15,25 @@
         <a class="headerText headerRightTextAbstand">IMPRESSUM und KONTAKT</a>
       </div>
     </header>
+    <div class="headerText">
+      <h1>Impressum</h1>
+      <a>Es war einmal ein großer Filmfan namens Alex, der voller Vorfreude eine berühmte Filmreihe anschauen wollte. Doch in seiner Begeisterung übersah er die richtige Reihenfolge und begann mitten in der Serie. Die spannende Handlung verwirrte ihn, und wichtige Wendepunkte machten keinen Sinn. Der Spaß war dahin, und die Enttäuschung groß.</a>
+      <a>Sein Freund Ben sah Alex' Frust und beschloss, eine Website zu erstellen, die dieses Problem für alle Filmfans löst. Diese Website bietet klare Anleitungen zur richtigen Reihenfolge von Filmreihen, damit niemand wie Alex den Spaß an den Geschichten verliert.</a>
+      <a>Diese Seite ist Bens Geschenk an alle Filmliebhaber, um sicherzustellen, dass jeder das beste Filmerlebnis genießt.</a>
+      <a>Firma:</a>
+      <a>Ben's Movie Guide GmbH</a>
+      <a>Musterstraße 1</a>
+      <a>12345 Filmstadt</a>
+      <a>Kontakt:</a>
     
-    <h1>Impressum</h1>
-    <p>Es war einmal ein großer Filmfan namens Alex, der voller Vorfreude eine berühmte Filmreihe anschauen wollte. Doch in seiner Begeisterung übersah er die richtige Reihenfolge und begann mitten in der Serie. Die spannende Handlung verwirrte ihn, und wichtige Wendepunkte machten keinen Sinn. Der Spaß war dahin, und die Enttäuschung groß.</p>
-    <p>Sein Freund Ben sah Alex' Frust und beschloss, eine Website zu erstellen, die dieses Problem für alle Filmfans löst. Diese Website bietet klare Anleitungen zur richtigen Reihenfolge von Filmreihen, damit niemand wie Alex den Spaß an den Geschichten verliert.</p>
-    <p>Diese Seite ist Bens Geschenk an alle Filmliebhaber, um sicherzustellen, dass jeder das beste Filmerlebnis genießt.</p>
-    <p>Firma:</p>
-    <p>Ben's Movie Guide GmbH</p>
-    <p>Musterstraße 1</p>
-    <p>12345 Filmstadt</p>
-    <p>Kontakt:</p>
-    
-    <p>Telefon: 01234/56789</p>
-    <p>E-Mail: info@bensmovieguide.de</p>
-    <p>Geschäftsführer: Ben Mustermann</p>
-    <p>Ansprechpartner: Alex</p>
-    <p>Handelsregister: HRB 12345</p>
-    <p>Umsatzsteuer-ID: DE123456789</p>
-    <p>Haftungsausschluss:</p>
-    <p>Die Inhalte dieser Website wurden mit größtmöglicher Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen.</p>
+      <a>Telefon: 01234/56789</a>
+      <a>E-Mail: info@bensmovieguide.de</a>
+      <a>Geschäftsführer: Ben Mustermann</a>
+      <a>Ansprechpartner: Alex</a>
+      <a>Handelsregister: HRB 12345</a>
+      <a>Umsatzsteuer-ID: DE123456789</a>
+      <a>Haftungsausschluss:</a>
+      <a>Die Inhalte dieser Website wurden mit größtmöglicher Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen.</a>
+  </div>
   </body>
 </html>
