--- a/html/animes.html
+++ b/html/animes.html
@@ -15,6 +15,12 @@
           <a href="impressum.html" class="headerText headerRightTextAbstand">IMPRESSUM und KONTAKT</a>
         </div>
     </header>
+    <div class="otherCatogories whiteText">
+      <h3>Andere Kategorien: </h3>
+      <a href="filme.html">Filme</a>
+      <a href="videospiele.html">Videospiele</a>
+    </div>
+
       <h3 class="whiteText">Inhaltsangabe</h3>
     <ul class="whiteText">
       <li><a href="#Fate" class="whiteText">Fate</a></li>
