--- a/html/animes.html
+++ b/html/animes.html
@@ -16,7 +16,7 @@
         </div>
     </header>
     <div class="otherCatogories whiteText">
-      <a class="headerText">Andere Kategorien: </a>
+      <b>Andere Kategorien: </b>
       <a href="filme.html">Filme</a>
       <a href="videospiele.html">Videospiele</a>
     </div>
