--- a/html/filme.html
+++ b/html/filme.html
@@ -15,6 +15,12 @@
         <a href="impressum.html" class="headerText headerRightTextAbstand">IMPRESSUM und KONTAKT</a>
       </div>
     </header>
+    <div class="otherCatogories whiteText">
+      <b>Andere Kategorien: </b>
+      <a href="videospiele.html">Videospiele</a>
+      <a href="animes.html">Animes und Mangas</a>
+    </div>
+
     <h3 class="whiteText">Inhaltsangabe</h3>
     <ul class="whiteText">
       <li><a href="#MCU" class="whiteText">MCU</a></li>
