--- a/html/impressum.html
+++ b/html/impressum.html
@@ -15,7 +15,15 @@
         <a class="headerText headerRightTextAbstand">IMPRESSUM und KONTAKT</a>
       </div>
     </header>
-    <div class="headerText">
+
+    <div class="otherCatogories whiteText">
+      <b>Die Kategorien: </b>
+      <a href="videospiele.html">Videospiele</a>
+      <a href="animes.html">Animes und Mangas</a>
+      <a href="filme.html">Filme</a>
+    </div>
+
+    <div class="impressum">
       <h1>Impressum</h1>
       <a>Es war einmal ein großer Filmfan namens Alex, der voller Vorfreude eine berühmte Filmreihe anschauen wollte. Doch in seiner Begeisterung übersah er die richtige Reihenfolge und begann mitten in der Serie. Die spannende Handlung verwirrte ihn, und wichtige Wendepunkte machten keinen Sinn. Der Spaß war dahin, und die Enttäuschung groß.</a>
       <a>Sein Freund Ben sah Alex' Frust und beschloss, eine Website zu erstellen, die dieses Problem für alle Filmfans löst. Diese Website bietet klare Anleitungen zur richtigen Reihenfolge von Filmreihen, damit niemand wie Alex den Spaß an den Geschichten verliert.</a>
