--- a/html/videospiele.html
+++ b/html/videospiele.html
@@ -15,6 +15,12 @@
           <a href="impressum.html" class="headerText headerRightTextAbstand">IMPRESSUM und KONTAKT</a>
         </div>
     </header>
+    <div class="otherCatogories whiteText">
+      <b>Andere Kategorien: </b>
+      <a href="animes.html">Animes und Mangas</a>
+      <a href="filme.html">Filme</a>
+    </div>
+
     <h3 class="whiteText">Inhaltsangabe</h3>
     <ul class="whiteText">
       <li><a href="#ACRel" class="whiteText">Assassins Creed Release Reihenfolge</a></li>
