--- a/startseite.html
+++ b/startseite.html
@@ -12,7 +12,7 @@
         <a href="../startseite.html" class="headerText">STARTSEITE</a>
       </div>
       <div class="headerRight">
-        <a class="headerText headerRightTextAbstand">IMPRESSUM und KONTAKT</a>
+        <a class="headerText headerRightTextAbstand" href="html/impressum.html">IMPRESSUM und KONTAKT</a>
       </div>
    </header>
     <h1>Get the order!</h1>
