--- a/html/videospiele.html
+++ b/html/videospiele.html
@@ -15,7 +15,7 @@
           <a href="impressum.html" class="headerText headerRightTextAbstand">IMPRESSUM und KONTAKT</a>
         </div>
     </header>
-    <div class="otherCatogories whiteText">
+    <div class="otherCatogories">
       <b>Andere Kategorien: </b>
       <a href="animes.html">Animes und Mangas</a>
       <a href="filme.html">Filme</a>
