--- a/startseite.html
+++ b/startseite.html
@@ -50,18 +50,18 @@
     </div>
     <footer>
       <p>Firma:</p>
-      <p>Ben's Movie Guide GmbH</p>
-      <p>Musterstraße 1</p>
-      <p>12345 Filmstadt</p>
+      <a>Ben's Movie Guide GmbH</a>
+      <a>Musterstraße 1</a>
+      <a>12345 Filmstadt</a>
       <p>Kontakt:</p>
-      <p>Telefon: 01234/56789</p>
-      <p>E-Mail: info@bensmovieguide.de</p>
-      <p>Geschäftsführer: Ben Mustermann</p>
-      <p>Ansprechpartner: Alex</p>
-      <p>Handelsregister: HRB 12345</p>
-      <p>Umsatzsteuer-ID: DE123456789</p>
+      <a>Telefon: 01234/56789</a>
+      <a>E-Mail: info@bensmovieguide.de</a>
+      <a>Geschäftsführer: Ben Mustermann</a>
+      <a>Ansprechpartner: Alex</a>
+      <a>Handelsregister: HRB 12345</a>
+      <a>Umsatzsteuer-ID: DE123456789</a>
       <p>Haftungsausschluss:</p>
-      <p>Die Inhalte dieser Website wurden mit größtmöglicher Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen.</p> 
+      <a>Die Inhalte dieser Website wurden mit größtmöglicher Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen.</a>
     </footer>
   </body>
 </html>
