--- a/html/filme.html
+++ b/html/filme.html
@@ -15,7 +15,7 @@
         <a href="impressum.html" class="headerText headerRightTextAbstand">IMPRESSUM und KONTAKT</a>
       </div>
     </header>
-    <div class="otherCatogories whiteText">
+    <div class="otherCatogories">
       <b>Andere Kategorien: </b>
       <a href="videospiele.html">Videospiele</a>
       <a href="animes.html">Animes und Mangas</a>
