--- a/html/impressum.html
+++ b/html/impressum.html
@@ -16,7 +16,7 @@
       </div>
     </header>
 
-    <div class="otherCatogories whiteText">
+    <div class="otherCatogories">
       <b>Die Kategorien: </b>
       <a href="videospiele.html">Videospiele</a>
       <a href="animes.html">Animes und Mangas</a>
