--- a/html/impressum.html
+++ b/html/impressum.html
@@ -18,9 +18,9 @@
 
     <div class="otherCatogories">
       <b>Die Kategorien: </b>
-      <a href="videospiele.html">Videospiele</a>
-      <a href="animes.html">Animes und Mangas</a>
-      <a href="filme.html">Filme</a>
+      <a class="link" href="videospiele.html">Videospiele</a>
+      <a class="link" href="animes.html">Animes und Mangas</a>
+      <a class="link" href="filme.html">Filme</a>
     </div>
 
     <div class="impressum">
