--- a/html/animes.html
+++ b/html/animes.html
@@ -17,8 +17,8 @@
     </header>
     <div class="otherCatogories">
       <b>Andere Kategorien: </b>
-      <a href="videospiele.html">Videospiele</a>
-      <a href="filme.html">Filme</a>
+      <a class="link" href="videospiele.html">Videospiele</a>
+      <a class="link" href="filme.html">Filme</a>
     </div>
 
       <h3 class="whiteText">Inhaltsangabe</h3>
