--- a/html/videospiele.html
+++ b/html/videospiele.html
@@ -17,8 +17,8 @@
     </header>
     <div class="otherCatogories">
       <b>Andere Kategorien: </b>
-      <a href="animes.html">Animes und Mangas</a>
-      <a href="filme.html">Filme</a>
+      <a class="link" href="animes.html">Animes und Mangas</a>
+      <a class="link" href="filme.html">Filme</a>
     </div>
 
     <h3 class="whiteText">Inhaltsangabe</h3>
