--- a/html/filme.html
+++ b/html/filme.html
@@ -17,8 +17,8 @@
     </header>
     <div class="otherCatogories">
       <b>Andere Kategorien: </b>
-      <a href="videospiele.html">Videospiele</a>
-      <a href="animes.html">Animes und Mangas</a>
+      <a class="link" href="videospiele.html">Videospiele</a>
+      <a class="link" href="animes.html">Animes und Mangas</a>
     </div>
 
     <h3 class="whiteText">Inhaltsangabe</h3>
