--- a/html/animes.html
+++ b/html/animes.html
@@ -18,6 +18,7 @@
     <div class="otherCatogories">
       <b>Andere Kategorien: </b>
       <a class="link" href="videospiele.html">Videospiele</a>
+      <a class="whiteTexts">, </a>
       <a class="link" href="filme.html">Filme</a>
     </div>
 
