--- a/html/impressum.html
+++ b/html/impressum.html
@@ -19,7 +19,9 @@
     <div class="otherCatogories">
       <b>Die Kategorien:     </b>
       <a class="link" href="videospiele.html">Videospiele</a>
+      <a class="whiteText">, </a>
       <a class="link" href="animes.html">Animes und Mangas</a>
+      <a class="whiteText">, </a>
       <a class="link" href="filme.html">Filme</a>
     </div>
     <br>
