--- a/html/videospiele.html
+++ b/html/videospiele.html
@@ -18,7 +18,8 @@
     <div class="otherCatogories">
       <b>Andere Kategorien: </b>
       <a class="link" href="animes.html">Animes und Mangas</a>
-      <a class="link" href="filme.html">Filme</a>
+      <a class="whiteText">, </a>
+      <a class="headerTextHier" href="filme.html">Filme</a>
     </div>
 
     <h3 class="whiteText">Inhaltsangabe</h3>
