--- a/html/filme.html
+++ b/html/filme.html
@@ -18,6 +18,7 @@
     <div class="otherCatogories">
       <b>Andere Kategorien: </b>
       <a class="link" href="videospiele.html">Videospiele</a>
+      <a class="whiteText">, </a>
       <a class="link" href="animes.html">Animes und Mangas</a>
     </div>
 
