--- a/html/impressum.html
+++ b/html/impressum.html
@@ -17,12 +17,12 @@
     </header>
 
     <div class="otherCatogories">
-      <b>Die Kategorien:     </b>
-      <a class="link" href="videospiele.html">Videospiele</a>
-      <a class="whiteText">, </a>
-      <a class="link" href="animes.html">Animes und Mangas</a>
-      <a class="whiteText">, </a>
-      <a class="link" href="filme.html">Filme</a>
+      <b>Die Kategorien:</b>
+      <a class="link headerTextHier" href="videospiele.html">Videospiele</a>
+      <a class="whiteText">,</a>
+      <a class="link headerTextHier" href="animes.html">Animes und Mangas</a>
+      <a class="whiteText">,</a>
+      <a class="link headerTextHier" href="filme.html">Filme</a>
     </div>
     <br>
     <div class="impressum">
