--- a/html/videospiele.html
+++ b/html/videospiele.html
@@ -16,10 +16,10 @@
         </div>
     </header>
     <div class="otherCatogories">
-      <b>Andere Kategorien: </b>
-      <a class="link" href="animes.html">Animes und Mangas</a>
-      <a class="whiteText">, </a>
-      <a class="headerTextHier" href="filme.html">Filme</a>
+      <b>Andere Kategorien:</b>
+      <a class="link headerTextHier" href="animes.html">Animes und Mangas</a>
+      <a class="whiteText">,</a>
+      <a class="link headerTextHier" href="filme.html">Filme</a>
     </div>
 
     <h3 class="whiteText">Inhaltsangabe</h3>
