--- a/html/animes.html
+++ b/html/animes.html
@@ -16,10 +16,10 @@
         </div>
     </header>
     <div class="otherCatogories">
-      <b>Andere Kategorien: </b>
-      <a class="link" href="videospiele.html">Videospiele</a>
-      <a class="whiteTexts">, </a>
-      <a class="link" href="filme.html">Filme</a>
+      <b>Andere Kategorien:</b>
+      <a class="link headerTextHier" href="videospiele.html">Videospiele</a>
+      <a class="whiteTexts">,</a>
+      <a class="link headerTextHier" href="filme.html">Filme</a>
     </div>
 
       <h3 class="whiteText">Inhaltsangabe</h3>
