--- a/html/filme.html
+++ b/html/filme.html
@@ -16,10 +16,10 @@
       </div>
     </header>
     <div class="otherCatogories">
-      <b>Andere Kategorien: </b>
-      <a class="link" href="videospiele.html">Videospiele</a>
-      <a class="whiteText">, </a>
-      <a class="link" href="animes.html">Animes und Mangas</a>
+      <b>Andere Kategorien:</b>
+      <a class="link headerTextHier" href="videospiele.html">Videospiele</a>
+      <a class="whiteText">,</a>
+      <a class="link headerTextHier" href="animes.html">Animes und Mangas</a>
     </div>
 
     <h3 class="whiteText">Inhaltsangabe</h3>
