--- a/html/videospiele.html
+++ b/html/videospiele.html
@@ -16,7 +16,7 @@
         </div>
     </header>
     <div class="otherCatogories">
-      <b>Andere Kategorien:</b>
+      <b class="whiteText">Andere Kategorien:</b>
       <a class="link headerTextHier" href="animes.html">Animes und Mangas</a>
       <a class="whiteText">,</a>
       <a class="link headerTextHier" href="filme.html">Filme</a>
