--- a/html/filme.html
+++ b/html/filme.html
@@ -16,7 +16,7 @@
       </div>
     </header>
     <div class="otherCatogories">
-      <b>Andere Kategorien:</b>
+      <b class="whiteText">Andere Kategorien:</b>
       <a class="link headerTextHier" href="videospiele.html">Videospiele</a>
       <a class="whiteText">,</a>
       <a class="link headerTextHier" href="animes.html">Animes und Mangas</a>
