--- a/html/impressum.html
+++ b/html/impressum.html
@@ -17,7 +17,7 @@
     </header>
 
     <div class="otherCatogories">
-      <b>Die Kategorien:</b>
+      <b class="whiteText">Die Kategorien:</b>
       <a class="link headerTextHier" href="videospiele.html">Videospiele</a>
       <a class="whiteText">,</a>
       <a class="link headerTextHier" href="animes.html">Animes und Mangas</a>
