--- a/html/animes.html
+++ b/html/animes.html
@@ -18,7 +18,7 @@
     <div class="otherCatogories">
       <b class="whiteText">Andere Kategorien:</b>
       <a class="link headerTextHier" href="videospiele.html">Videospiele</a>
-      <a class="whiteTexts">,</a>
+      <a class="whiteText">,</a>
       <a class="link headerTextHier" href="filme.html">Filme</a>
     </div>
 
@@ -27,7 +27,7 @@
       <li><a href="#Fate" class="whiteText">Fate</a></li>
     </ul>
     <div class="whiteText">
-      <h3>Filme</h3>
+      <h3>Animes und Mangas</h3>
       <h4 id="Fate">Fate in chonologischer Reihenfolge:</h4>
       <div class="displayOrder">
         <h5>Fate/stay night:</h5>
